force-app/main/default/objects/Proforma_Invoice__c/Proforma_Invoice__c.object-meta.xml
<CustomObject>
    <label>Request for Payment</label>
    <nameField>
        <displayFormat>INV- {DD} / {MM} / {YYYY}-{000000}</displayFormat>
        <label>Proforma Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proforma Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>