force-app/main/default/objects/Proforma_Invoice__c/fields/AED_to_USD_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>AED_to_USD_Conversion_Rate__c</fullName>
    <formula>$Setup.Opportunity__c.AED_to_USD_Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AED to USD Conversion Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>