force-app/main/default/objects/Proforma_Invoice__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>