force-app/main/default/objects/Proforma_Invoice__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>PropStrength__Request__c</referenceTo>
    <relationshipLabel>Proforma Invoices</relationshipLabel>
    <relationshipName>Proforma_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>