force-app/main/default/objects/Proforma_Invoice__c/fields/Generate_invoice_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Generate_invoice_in_USD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate invoice in USD</label>
    <type>Checkbox</type>
</CustomField>