force-app/main/default/objects/Proforma_Invoice__c/fields/Input_Value__c.field-meta.xml
<CustomField>
    <fullName>Input_Value__c</fullName>
    <formula>Opportunity__r.Input_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Input Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>