force-app/main/default/objects/Proforma_Invoice__c/fields/Installment_due_amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Installment_due_amount_USD__c</fullName>
    <formula>Opportunity__r.Installment_due_amount_Formula_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment due amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>