force-app/main/default/objects/Proforma_Invoice__c/fields/Invoice_amount_received_Dropdown__c.field-meta.xml
<CustomField>
    <fullName>Invoice_amount_received_Dropdown__c</fullName>
    <label>Invoice amount received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>