force-app/main/default/objects/Proforma_Invoice__c/fields/Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Date</label>
    <type>Date</type>
</CustomField>