force-app/main/default/objects/Proforma_Invoice__c/fields/Oqood_Fee__c.field-meta.xml
<CustomField>
    <fullName>Oqood_Fee__c</fullName>
    <formula>Opportunity__r.Oqood_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oqood Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>