force-app/main/default/objects/Proforma_Invoice__c/fields/Owner_s_Manager_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner&apos;s Manager&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proforma_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>