force-app/main/default/objects/Proforma_Invoice__c/fields/Proforma_Invoice_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Sub_Type__c</fullName>
    <formula>TEXT(  Opportunity__r.Proforma_Invoice_Sub_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proforma Invoice Sub Type</label>
    <type>Text</type>
</CustomField>