force-app/main/default/objects/Proforma_Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>IF(  Proforma_Invoice_Type__c =&apos;Unit Price&apos;,Installment_due_amount_AED__c + VAT_amount_applicable_AED__c ,Installment_due_amount_AED__c + Oqood_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>