force-app/main/default/objects/Proforma_Invoice__c/fields/VAT_amount_applicable_AED__c.field-meta.xml
<CustomField>
    <fullName>VAT_amount_applicable_AED__c</fullName>
    <formula>Opportunity__r.VAT_amount_applicable_AED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT amount applicable (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>