force-app/main/default/objects/Proforma_Invoice__c/listViews/Proforma_Invoices_Finance_view.listView-meta.xml
<ListView>
    <fullName>Proforma_Invoices_Finance_view</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Proforma_Invoice_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Unit_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>Proforma Invoices - Finance view</label>
    <sharedTo>
        <role>Finance</role>
    </sharedTo>
</ListView>